<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txt_hint_edit_primeiro_nome"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="91dp" />

    <EditText
        android:id="@+id/SOBRENOME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txt_hint_edit_sobrenome"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="163dp" />

    <EditText
        android:id="@+id/SOBRENOME2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txt_hint_edit_nome_do_curso_desejado"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="243dp" />

    <EditText
        android:id="@+id/SOBRENOME4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txt_hint_edit_telefone_de_contato"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="327dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="137dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="60dp"

        android:text="@string/txt_button_limpar"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/SOBRENOME4"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/corBotoes"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="543dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="129dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"

        android:text="@string/txt_button_salvar"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/SOBRENOME4"
        app:layout_constraintVertical_bias="0.417"
        tools:layout_editor_absoluteX="234dp" />

</androidx.constraintlayout.widget.ConstraintLayout>